# simple-comparison

./: .gitignore  README.md  WORKSPACE  benchmark.sh  build.gradle  gradle-profiler  gradle.properties  performance.scenarios  settings.gradle
autodeps/artifact/com_android_support_appcompat_v7_aar/: BUILD.bazel
autodeps/artifact/com_android_support_support_annotations_jar/: BUILD.bazel
autodeps/artifact/com_android_support_support_core_ui_aar/: BUILD.bazel
autodeps/artifact/com_android_support_support_v4_aar/: BUILD.bazel
autodeps/artifact/com_google_auto_auto_common_jar/: BUILD.bazel
autodeps/artifact/com_google_auto_service_auto_service_jar/: BUILD.bazel
autodeps/artifact/com_google_guava_guava_jar/: BUILD.bazel
autodeps/artifact/com_squareup_okhttp3_okhttp_jar/: BUILD.bazel
autodeps/artifact/com_squareup_okio_okio_jar/: BUILD.bazel
autodeps/artifact/com_squareup_retrofit2_retrofit_jar/: BUILD.bazel
autodeps/artifact/commons_io_commons_io_jar/: BUILD.bazel
autodeps/artifact/commons_pool_commons_pool_jar/: BUILD.bazel
autodeps/artifact/io_reactivex_rxjava2_rxjava_jar/: BUILD.bazel
autodeps/artifact/org_apache_commons_commons_lang3_jar/: BUILD.bazel
autodeps/artifact/org_apache_commons_commons_math3_jar/: BUILD.bazel
autodeps/artifact/org_reactivestreams_reactive_streams_jar/: BUILD.bazel
gradle/wrapper/: gradle-wrapper.properties
node1/: BUILD.bazel  build.bazel  build.gradle
node1/src/main/: AndroidManifest.xml
node1/src/main/java/com/node1/: LoginActivity.java  Service.java  Thing.java
node1/src/main/java/com/studio/node1/: LoginActivity.java  Service.java  Thing.java
node2a/: build.bazel
node2a/src/main/: AndroidManifest.xml
node2a/src/main/java/com/studio/node2a/: Thing.java
node2b/: BUILD.bazel  build.gradle
node2b/src/main/: AndroidManifest.xml
node2b/src/main/java/com/studio/node2b/: Thing.java
node2c/: build.bazel
node2c/src/main/: AndroidManifest.xml
node2c/src/main/java/com/studio/node2c/: Thing.java
node2d/: BUILD.bazel
node2d/src/main/: AndroidManifest.xml
node2d/src/main/java/com/studio/node2d/: Thing.java
node3/: build.bazel  build.gradle
node3/src/main/: AndroidManifest.xml
node3/src/main/java/com/studio/node3/: Thing.java
node4/: BUILD.bazel  build.gradle
node4/src/main/: AndroidManifest.xml
node4/src/main/java/com/studio/node4/: Thing.java
node5/: BUILD.bazel  build.gradle
node5/src/main/: AndroidManifest.xml
node5/src/main/java/com/studio/node5/: Thing.java
