android_library(
	visibility=["//visibility:public"],
	name="android_debug",
	srcs=["//node5:build_config_debug"]+glob(include=["src/main/java/**/*.java"]),
	deps=["//autodeps/artifact/org_apache_commons_commons_math3_jar:jar","//autodeps/artifact/commons_pool_commons_pool_jar:jar","//autodeps/artifact/com_squareup_retrofit2_retrofit_jar:jar","//autodeps/artifact/io_reactivex_rxjava2_rxjava_jar:jar"],
	exports=["//autodeps/artifact/org_apache_commons_commons_math3_jar:jar","//autodeps/artifact/commons_pool_commons_pool_jar:jar","//autodeps/artifact/com_squareup_retrofit2_retrofit_jar:jar"],
	custom_package="com.studio.node5",
	manifest="src/main/AndroidManifest.xml",
	exports_manifest=1,
	resource_files=glob(include=["src/main/res/**/*"])
)

genrule(
	visibility=["//visibility:public"],
	name="build_config_debug",
	cmd="echo 'package com.studio.node5; public class BuildConfig { public static final String APPLICATION_ID = \"com.studio.node5\"; public static final String BUILD_TYPE = \"debug\"; public static final boolean DEBUG = false; public static final int VERSION_CODE = -1; public static final String VERSION_NAME = \"null\"; }' > $(@)",
	outs=["build_config_debug/BuildConfig.java"]
)
